# max6675-hal

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
.github/workflows/ci/: main.rs
examples/linux/: Cargo.toml
examples/linux/src/: main.rs
examples/mega2560/: Cargo.toml  README.md
examples/mega2560/.cargo/: config.toml
examples/mega2560/src/: main.rs
src/: error.rs  hal.rs  lib.rs  temperature.rs
tests/: max.rs
