[package]
name = "max6675-hal"
version = "0.3.1"
edition = "2021"
license = "MIT"

[features]
std = []

[dependencies]
simmer = { version = "0.3", features = ["f32"] }
embedded-hal = { version = "0.2", features = ["unproven"] }
ufmt = "0.2"

[dev-dependencies]
anyhow = "1.0.75"
assert_approx_eq = "1.1.0"
embedded-hal-mock = "0.9.0"
