[package]
name = "linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
embedded-hal = "0.2.7"
linux-embedded-hal = { version = "0.3", features = ["gpio_cdev"] }
max6675_hal = { path = "../../", features = ["std"] }
