[package]
name = "mega2560"
version = "0.1.0"
authors = ["barrett <onkoe@protonmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "mega2560"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "1.0"
ufmt_float = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-mega2560"]

[dependencies.max6675-hal]
path = "../../"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
